Views updates, styles, routing

--- a/app.json
+++ b/app.json
@@ -1,11 +1,12 @@
 {
   "expo": {
-    "name": "wink-react-native",
+    "name": "Wink-react-native",
     "slug": "wink-react-native",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
+    "schema": "wink-react-native",
     "splash": {
       "image": "./assets/images/splash.png",
       "resizeMode": "contain",
@@ -15,6 +16,7 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.ejemplo.wink-react-native",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
